--- a/ml_testing/templates/base.html
+++ b/ml_testing/templates/base.html
@@ -30,7 +30,7 @@
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="{% static "/css/signin.css" %}" rel="stylesheet">
-        <body style="background-color:darkred;background-image:url('{% static 'images/original.jpg' %}'); background-position: center;background-size: cover;" >
+        <body style="background-color:grey; background-position: center;background-size: cover;" >
 
 
         {% block Content %}
