--- a/ml_testing/templates/statu.html
+++ b/ml_testing/templates/statu.html
@@ -102,38 +102,7 @@ height:600px !important;}
 
 
 
-
-<form action="register" method="POST">
-     {% csrf_token %}
-<label> Firstname </label>
-<input type="text" name="firstname" size="15"> <br> <br>
-
-<label> Lastname: </label>
-<input type="text" name="lastname" size="15"> <br> <br>
-
-<label> Admission Number: </label>
-<input type="text" name="lastname" size="15"> <br> <br>
-
-<label> Tuition Fee Payment Reciept No:  </label>
-<input type="text" name="tuitionfee" size="15"> <br> <br>
-
-<label> Mess Fee Payment Reciept No:  </label>
-<input type="text" name="messfee" size="15"> <br> <br>
-
-<label> Hostel Fee Payment Reciept No:  </label>
-<input type="text" name="messfee" size="15"> <br> <br>
-
-<label>
-Course :
-</label>
-<select>
-<option value="Course">Course</option>
-<option value="B.Tech">B.Tech</option>
-<option value="M.Tech">M.Tech</option>
-</select>
-<br><br>
-<button class="btn btn-lg btn-success  btn-block" type="submit">Register </button>
-</form>
+<h1> Submited </h1>
 
 
 
