--- a/ml_testing/templates/home2.html
+++ b/ml_testing/templates/home2.html
@@ -112,7 +112,7 @@ height:600px !important;}
 <input type="text" name="lastname" size="15"> <br> <br>
 
 <label> Admission Number: </label>
-<input type="text" name="lastname" size="15"> <br> <br>
+<input type="text" name="studentId" size="15"> <br> <br>
 
 <label> Tuition Fee Payment Reciept No:  </label>
 <input type="text" name="tuitionfee" size="15"> <br> <br>
@@ -121,18 +121,18 @@ height:600px !important;}
 <input type="text" name="messfee" size="15"> <br> <br>
 
 <label> Hostel Fee Payment Reciept No:  </label>
-<input type="text" name="messfee" size="15"> <br> <br>
+<input type="text" name="hostelfee" size="15"> <br> <br>
 
 <label>
 Course :
 </label>
-<select>
-<option value="Course">Course</option>
+<select name= "course">
+<option value="Course">Select</option>
 <option value="B.Tech">B.Tech</option>
 <option value="M.Tech">M.Tech</option>
 </select>
 <br><br>
-<button class="btn btn-lg btn-success  btn-block" type="submit">Register </button>
+<button class="btn btn-success" type="submit">Register </button>
 </form>
 
 
