--- a/ml_testing/templates/home2.html
+++ b/ml_testing/templates/home2.html
@@ -101,40 +101,107 @@ height:600px !important;}
       <div class="col-sm-9">
 
 
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+}
 
+* {
+  box-sizing: border-box;
+}
+
+/* Add padding to containers */
+.container {
+  padding: 16px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+input[type=text], select {
+  width: 29%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Overwrite default styles of hr */
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+/* Set a style for the submit button */
+.registerbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 50%;
+  opacity: 0.9;
+}
+
+.registerbtn:hover {
+  opacity: 1;
+}
+
+/* Add a blue text color to links */
+a {
+  color: dodgerblue;
+}
+
+/* Set a grey background color and center the text of the "sign in" section */
+.signin {
+  background-color: #f1f1f1;
+  text-align: center;
+}
+</style>
 
 <form action="register" method="POST">
      {% csrf_token %}
-<label> Firstname </label>
-<input type="text" name="firstname" size="15"> <br> <br>
+  <div class="container">
+    <h1>Welcome!</h1>
+    <p>Please fill in this form to register for your course.</p>
+    <hr>
 
-<label> Lastname: </label>
-<input type="text" name="lastname" size="15"> <br> <br>
+    <label> Firstname: </label> &nbsp;
+    <input type="text" name="firstname" size="15"> <br> <br>
 
-<label> Admission Number: </label>
-<input type="text" name="studentId" size="15"> <br> <br>
+    <label> Lastname: </label>&nbsp;
+    <input type="text" name="lastname" size="15"> <br> <br>
 
-<label> Tuition Fee Payment Reciept No:  </label>
-<input type="text" name="tuitionfee" size="15"> <br> <br>
+    <label> Admission Number: </label>&nbsp;
+    <input type="text" name="studentId" size="15"> <br> <br>
 
-<label> Mess Fee Payment Reciept No:  </label>
-<input type="text" name="messfee" size="15"> <br> <br>
+    <label> Tuition Fee Payment Reciept No:  </label>&nbsp;
+    <input type="text" name="tuitionfee" size="15"> <br> <br>
 
-<label> Hostel Fee Payment Reciept No:  </label>
-<input type="text" name="hostelfee" size="15"> <br> <br>
+    <label> Mess Fee Payment Reciept No:  </label>&nbsp;
+    <input type="text" name="messfee" size="15"> <br> <br>
 
-<label>
-Course :
-</label>
-<select name= "course">
-<option value="Course">Select</option>
-<option value="B.Tech">B.Tech</option>
-<option value="M.Tech">M.Tech</option>
-</select>
-<br><br>
-<button class="btn btn-success" type="submit">Register </button>
+    <label> Hostel Fee Payment Reciept No:  </label>&nbsp;
+    <input type="text" name="hostelfee" size="15"> <br> <br>
+    <label>
+    Course :
+    </label>&nbsp;
+    <select name= "course">
+      <option value="Course">Select</option>
+      <option value="B.Tech">B.Tech</option>
+      <option value="M.Tech">M.Tech</option>
+    </select>
+    <hr>
+    <button type="submit" class="registerbtn" onclick="window.location.href='home'">Register</button>
+  </div>
 </form>
-
 
 
 
