--- a/ml_testing/templates/view.html
+++ b/ml_testing/templates/view.html
@@ -93,25 +93,33 @@ height:600px !important;}
 <div class="col-md-9">
 
 
- <table class='table  table-hover ' border="1" style='background-color:rgba(0,240, 251,0.7);padding-top:10px';>
+ <table class='table  table-hover ' border="1" style='background-color:ghostwhite;padding-top:10px';>
      <thead>
-     <th><h3>{{inp}}</h3></th>
-     </thead>
-     <thead>
-         <th>Possible String</th>
-     <th> Count</th>
-     <th> Probability</th>
+      <th>Student Id</th>
+      <th> Name</th>
+      <th> Tuition Fee</th>
+      <th> Mess Fee</th>
+      <th> Hostel Fee</th>
+      <th> Course</th>
+      <th> Status</th>
+      <th style="text-align:center"> Action</th>
 
      </thead>
      <tbody>
      {%  for i in data %}
      <tr>
-        <b></b> <td>{{i.first}} </td>
-         <td>{{i.last}}</td><td>{{i.status}}</td></b>
-         <td>
- {% if i.status == 'Initial' %}
-    <button >Approve</button>
-    {% endif %}
+        <b></b> <td>{{i.student_id}} </td>
+         <td>{{i.first_name}} &nbsp; {{i.last_name}}</td>
+         <td>{{i.tuitionfee}}</td>
+         <td>{{i.messfee}}</td>
+         <td>{{i.hostelfee}}</td>
+         <td>{{i.course}}</td>
+         <td>{{i.status}}</td>
+         <td style="justify-content: space-evenly;display: flex;">
+          {% if i.status == 'Initial' %}
+            <button style="color: green;">Approve</button>
+            <button style="color: red;"> Reject</button>
+          {% endif %}
          </td>
      </tr>
      {% endfor %}
