--- a/ml_testing/templates/home.html
+++ b/ml_testing/templates/home.html
@@ -74,50 +74,46 @@ height:600px !important;}
 
     <div class ="row">
       <div class="col-sm-1">
-<table class='table  table-hover ' border="1" style='background-color:rgba(103, 121, 201, 0.7)  ;padding-top:10px';>
 
+      </div>
+     <div class="col-md-9">
+<table class='table  table-hover ' border="1" style='background-color:ghostwhite;padding-top:10px';>
+     <thead>
+      <th>Student Id</th>
+      <th> Name</th>
+      <th> Tuition Fee</th>
+      <th> Mess Fee</th>
+      <th> Hostel Fee</th>
+      <th> Course</th>
+      <th> Status</th>
+      <th style="text-align:center"> Action</th>
 
-<tr >
-  <td>
-    <button class="btn btn-lg btn-primary  btn-block"  onclick="window.location.href='fetch_corpus'"> Create Corpus</button>
-  </td></tr>
-  <tr>
-  <td>
-    <button class="btn btn-lg btn-primary  btn-block" onclick="window.location.href='l_models'"> Create L-Models</button>
-  </td>
-</tr>
-<tr>
-  <td>
-    <button class="btn btn-lg btn-primary  btn-block" onclick="window.location.href='report'"> Create Report</button>
-  </td>
-</tr>
-  <tr>
-     <td>
-    <button class="btn btn-lg btn-primary  btn-block" onclick="window.location.href='grams?n=2'"> Get Bigrams</button>
-  </td>
-</tr>
-      <tr>
-     <td>
-    <button class="btn btn-lg btn-primary  btn-block" onclick="window.location.href='grams?n=3'"> Get Trigrams</button>
-  </td>
-</tr>
+     </thead>
+     <tbody>
+     {%  for i in data %}
+     <tr>
+        <b></b> <td>{{i.student_id}} </td>
+         <td>{{i.first_name}} &nbsp; {{i.last_name}}</td>
+         <td>{{i.tuitionfee}}</td>
+         <td>{{i.messfee}}</td>
+         <td>{{i.hostelfee}}</td>
+         <td>{{i.course}}</td>
+         <td>{{i.status}}</td>
+         <td style="justify-content: space-evenly;display: flex;">
+          {% if i.status == 'Initial' %}
+            <button style="color: green;">Approve</button>
+            <button style="color: red;"> Reject</button>
+          {% endif %}
+         </td>
+     </tr>
+     {% endfor %}
+     </tbody>
+ </table>
 
-    </tr>
-      <tr>
-     <td>
-    <button class="btn btn-lg btn-primary  btn-block" onclick="window.location.href='getp'"> Get Probabilities</button>
-  </td>
-</tr>
+              </tr>
+          </table>
 
-       </tr>
-      <tr>
-     <td>
-    <button class="btn btn-lg btn-primary  btn-block" onclick="window.location.href='custom'"> Custom Words</button>
-  </td>
-</tr>
-
-
-</table>
+    <br>
       <script src="{% static 'js/jquery.min.js'  %}"></script>
 
       <script src="{% static 'js/in_script.js' %}"></script>
