--- a/ml_testing/templates/home2.html
+++ b/ml_testing/templates/home2.html
@@ -191,19 +191,19 @@ a {
     <hr>
 
     <label> Firstname: </label> &nbsp;
-    <input type="text" name="firstname" size="15"> <br> <br>
+    <input type="text" name="firstname" size="15" required> <br> <br>
 
     <label> Lastname: </label>&nbsp;
-    <input type="text" name="lastname" size="15"> <br> <br>
+    <input type="text" name="lastname" size="15" > <br> <br>
 
     <label> Admission Number: </label>&nbsp;
-    <input type="text" name="studentId" size="15"> <br> <br>
+    <input type="text" name="studentId" size="15" required> <br> <br>
 
     <label> Tuition Fee Payment Reciept No:  </label>&nbsp;
     <input type="text" name="tuitionfee" size="15"> <br> <br>
 
     <label> Mess Fee Payment Reciept No:  </label>&nbsp;
-    <input type="text" name="messfee" size="15"> <br> <br>
+    <input type="text" name="messfee" size="15" > <br> <br>
 
     <label> Hostel Fee Payment Reciept No:  </label>&nbsp;
     <input type="text" name="hostelfee" size="15"> <br> <br>
