--- a/ml_testing/templates/block.html
+++ b/ml_testing/templates/block.html
@@ -100,43 +100,16 @@ height:600px !important;}
 
       </div>
      <div class="col-md-9">
-<table class='table  table-hover ' border="1" style='background-color:ghostwhite;padding-top:10px';>
-     <thead>
-      <th>Student Id</th>
-      <th> Name</th>
-      <th> time</th>
-      <th> Tuition Fee</th>
-      <th> Mess Fee</th>
-      <th> Hostel Fee</th>
-      <th> Course</th>
-      <th> Status</th>
-      <th style="text-align:center"> Action</th>
-
-     </thead>
-     <tbody>
-     {%  for i in data %}
-     <tr>
-        <b></b> <td>{{i.student_id}} </td>
-         <td>{{i.first_name}} &nbsp; {{i.last_name}}</td>
-         <td>{{i.timestamp}} </td>
-         <td>{{i.tuitionfee}}</td>
-         <td>{{i.messfee}}</td>
-         <td>{{i.hostelfee}}</td>
-         <td>{{i.course}}</td>
-         <td>{{i.status}}</td>
-         <td style="justify-content: space-evenly;display: flex;">
-          {% if i.status == 'Initial' %}
-            <button onclick="location.href='change_status?id={{i.height}}&action=1'" style="color: green;">Approve</button>
-            <button onclick="location.href='change_status?id={{i.height}}&action=0'" style="color: red;"> Reject</button>
-          {% endif %}
-         </td>
-     </tr>
-     {% endfor %}
-     </tbody>
- </table>
-
-              </tr>
-          </table>
+         <table class='table  table-hover ' border="1" style='background-color:rgba(200, 240, 250, 0.7)  ;padding-top:10px';>
+            <tr>
+            <td>
+                <pre>
+          {{data}}
+                </pre>
+                </td>
+               </tr>
+         </table>
+     </div>
 
     <br>
       <script src="{% static 'js/jquery.min.js'  %}"></script>
