--- a/ml_testing/templates/home2.html
+++ b/ml_testing/templates/home2.html
@@ -105,6 +105,12 @@ swal({   title: "College Block Chain",   text: "Student  Added, waiting for appr
   </td>
 </tr>
 
+      <tr>
+  <td>
+    <button class="btn btn-lg btn-primary  btn-block" onclick="window.location.href='ledger'"> View Ledger</button>
+  </td>
+</tr>
+
 
 
     </tr>
